# cfcli

./: Cargo.toml  README.md
.github/workflows/: cfcli.yml
src/: main.rs
src/modules/: log.rs  param.rs
