[package]
name = "cf-cli"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Eliasson <marcus@bitcraze.io>"]
description = "Crazyflie CLI"
readme = "README.md"
repository = "https://github.com/evoggy/cf-cli"
license = "GPL 2.0"
keywords = ["crazyflie", "cli"]
categories = ["hardware-support"]

[dependencies]
async_executors = { version="0.4.2", features=["timer", "async_std"] }
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3.1"
flume = "0.10.5"
async-trait = "0.1.50"
num_enum = "0.5.1"
half = "1.7.1"
async-broadcast = "0.3.4"

async-std = { version = "1.9.0", features = ["attributes"] }

env_logger = "0.9.0"


crazyflie-link = {path="../crazyflie-link-rs/crazyflie-link"}
crazyflie-lib = {path="../crazyflie-lib-rs"}
clap = { version = "4.5.0", features = ["derive"] }

serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"
confy = "0.4.0"
clap_generate = "3.0.3"

